# civic-agent

./: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/versions/: 193c9b4ddf4a_add_perception_fields.py  72af10f9a2b8_initial_schema.py
app/: main.py
app/core/: config.py  logging.py  redis.py
app/db/: models.py
app/routers/: reports.py
app/schemas/: report.py  tools.py
app/services/: action.py  chroma_client.py  exif.py  gemini_client.py  groq_client.py  image_store.py  knowledge.py  mcp_tools.py  pdf_ingestor.py  perception.py  qwen_client.py
app/workers/: knowledge_worker.py  perception_worker.py
tests/: test_perception.py
